--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,2 @@
-VITE_SHAZAM_CORE_RAPID_API_KEY=
-VITE_GEO_API_KEY=
+VITE_SHAZAM_CORE_RAPID_API_KEY=2d43a1a34emsh7583443828d95cep1b7784jsn7af0732d4238
+VITE_GEO_API_KEY=at_LNq07L2MoyCgkXFQF2TDsEvPBRomr&
